--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="HardcodedText">
 
     <Button
-        android:id="@+id/btn_test"
+        android:id="@+id/btn_has_permissions"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="onClick"
-        android:text="TEST" />
+        android:text="hasPermissions" />
+
+    <Button
+        android:id="@+id/btn_run_on_permissions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="runOnPermissions" />
+
+    <Button
+        android:id="@+id/btn_run_on_permissions_or_finish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="runOnPermissionsOrFinish" />
+
+    <Button
+        android:id="@+id/btn_has_nfc_for_xiaomi"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="检查小米NFC权限" />
 </LinearLayout>
